hotfix: add overflow-x hidden to html and body to avoid unnecessary scrollX

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   --font-space-mono: "Space Mono", monospace;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .font-sans-serif {
   font-family: var(--font-space-grotesk);
 }
